src/Preprocessor/LBNF/LBNF/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from LBNF/LBNF/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pGrammar -> Grammar                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pListItem -> ListItem                       (2)
	%start_pDef -> Def                                 (3)
	%start_pItem -> Item                               (4)
	%start_pCat -> Cat                                 (5)
	%start_pLabel -> Label                             (6)
	%start_pLabelId -> LabelId                         (7)
	%start_pProfItem -> ProfItem                       (8)
	%start_pIntList -> IntList                         (9)
	%start_pListInteger -> ListInteger                 (10)
	%start_pListIntList -> ListIntList                 (11)
	%start_pListProfItem -> ListProfItem               (12)
	%start_pVariableType -> VariableType               (13)
	%start_pListString -> ListString                   (14)
	%start_pListRHS -> ListRHS                         (15)
	%start_pRHS -> RHS                                 (16)
	%start_pMinimumSize -> MinimumSize                 (17)
	%start_pReg2 -> Reg2                               (18)
	%start_pReg1 -> Reg1                               (19)
	%start_pReg3 -> Reg3                               (20)
	%start_pReg -> Reg                                 (21)
	%start_pListIdent -> ListIdent                     (22)
	Ident -> L_Ident                                   (23)
	Char -> L_charac                                   (24)
	Integer -> L_integ                                 (25)
	String -> L_quoted                                 (26)
	Grammar -> ListDef                                 (27)
	ListDef ->                                         (28)
	ListDef -> Def ';' ListDef                         (29)
	ListItem ->                                        (30)
	ListItem -> Item ListItem                          (31)
	Def -> Label '.' Cat '::=' ListItem                (32)
	Def -> 'comment' String                            (33)
	Def -> 'comment' String String                     (34)
	Def -> 'internal' Label '.' Cat '::=' ListItem     (35)
	Def -> 'token' Ident Reg                           (36)
	Def -> 'position' 'token' Ident Reg                (37)
	Def -> 'entrypoints' ListIdent                     (38)
	Def -> 'separator' MinimumSize Cat String          (39)
	Def -> 'terminator' MinimumSize Cat String         (40)
	Def -> 'coercions' Ident Integer                   (41)
	Def -> 'rules' Ident '::=' ListRHS                 (42)
	Def -> 'variable' VariableType Cat                 (43)
	Def -> 'layout' ListString                         (44)
	Def -> 'layout' 'stop' ListString                  (45)
	Def -> 'layout' 'toplevel'                         (46)
	Item -> String                                     (47)
	Item -> Cat                                        (48)
	Cat -> '[' Cat ']'                                 (49)
	Cat -> Ident                                       (50)
	Label -> LabelId                                   (51)
	Label -> LabelId ListProfItem                      (52)
	Label -> LabelId LabelId ListProfItem              (53)
	Label -> LabelId LabelId                           (54)
	LabelId -> Ident                                   (55)
	LabelId -> '_'                                     (56)
	LabelId -> '[' ']'                                 (57)
	LabelId -> '(' ':' ')'                             (58)
	LabelId -> '(' ':' '[' ']' ')'                     (59)
	ProfItem -> '(' '[' ListIntList ']' ',' '[' ListInteger ']' ')'   (60)
	IntList -> '[' ListInteger ']'                     (61)
	ListInteger ->                                     (62)
	ListInteger -> Integer                             (63)
	ListInteger -> Integer ',' ListInteger             (64)
	ListIntList ->                                     (65)
	ListIntList -> IntList                             (66)
	ListIntList -> IntList ',' ListIntList             (67)
	ListProfItem -> ProfItem                           (68)
	ListProfItem -> ProfItem ListProfItem              (69)
	VariableType -> 'scope'                            (70)
	VariableType -> 'name'                             (71)
	VariableType -> 'binder'                           (72)
	ListString -> String                               (73)
	ListString -> String ',' ListString                (74)
	ListRHS -> RHS                                     (75)
	ListRHS -> RHS '|' ListRHS                         (76)
	RHS -> ListItem                                    (77)
	MinimumSize -> 'nonempty'                          (78)
	MinimumSize ->                                     (79)
	Reg2 -> Reg2 Reg3                                  (80)
	Reg2 -> Reg3                                       (81)
	Reg1 -> Reg1 '|' Reg2                              (82)
	Reg1 -> Reg2 '-' Reg2                              (83)
	Reg1 -> Reg2                                       (84)
	Reg3 -> Reg3 '*'                                   (85)
	Reg3 -> Reg3 '+'                                   (86)
	Reg3 -> Reg3 '?'                                   (87)
	Reg3 -> 'eps'                                      (88)
	Reg3 -> Char                                       (89)
	Reg3 -> '[' String ']'                             (90)
	Reg3 -> '{' String '}'                             (91)
	Reg3 -> 'digit'                                    (92)
	Reg3 -> 'letter'                                   (93)
	Reg3 -> 'upper'                                    (94)
	Reg3 -> 'lower'                                    (95)
	Reg3 -> 'char'                                     (96)
	Reg3 -> '(' Reg ')'                                (97)
	Reg -> Reg1                                        (98)
	ListIdent -> Ident                                 (99)
	ListIdent -> Ident ',' ListIdent                   (100)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'*'            { PT _ (TS _ 3) }
	'+'            { PT _ (TS _ 4) }
	','            { PT _ (TS _ 5) }
	'-'            { PT _ (TS _ 6) }
	'.'            { PT _ (TS _ 7) }
	':'            { PT _ (TS _ 8) }
	'::='          { PT _ (TS _ 9) }
	';'            { PT _ (TS _ 10) }
	'?'            { PT _ (TS _ 11) }
	'['            { PT _ (TS _ 12) }
	']'            { PT _ (TS _ 13) }
	'_'            { PT _ (TS _ 14) }
	'binder'       { PT _ (TS _ 15) }
	'char'         { PT _ (TS _ 16) }
	'coercions'    { PT _ (TS _ 17) }
	'comment'      { PT _ (TS _ 18) }
	'digit'        { PT _ (TS _ 19) }
	'entrypoints'  { PT _ (TS _ 20) }
	'eps'          { PT _ (TS _ 21) }
	'internal'     { PT _ (TS _ 22) }
	'layout'       { PT _ (TS _ 23) }
	'letter'       { PT _ (TS _ 24) }
	'lower'        { PT _ (TS _ 25) }
	'name'         { PT _ (TS _ 26) }
	'nonempty'     { PT _ (TS _ 27) }
	'position'     { PT _ (TS _ 28) }
	'rules'        { PT _ (TS _ 29) }
	'scope'        { PT _ (TS _ 30) }
	'separator'    { PT _ (TS _ 31) }
	'stop'         { PT _ (TS _ 32) }
	'terminator'   { PT _ (TS _ 33) }
	'token'        { PT _ (TS _ 34) }
	'toplevel'     { PT _ (TS _ 35) }
	'upper'        { PT _ (TS _ 36) }
	'variable'     { PT _ (TS _ 37) }
	'{'            { PT _ (TS _ 38) }
	'|'            { PT _ (TS _ 39) }
	'}'            { PT _ (TS _ 40) }
	L_Ident        { PT _ (TV $$) }
	L_charac       { PT _ (TC $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pGrammar rule  0
	%start_pListDef rule  1
	%start_pListItem rule  2
	%start_pDef     rule  3
	%start_pItem    rule  4
	%start_pCat     rule  5
	%start_pLabel   rule  6
	%start_pLabelId rule  7
	%start_pProfItem rule  8
	%start_pIntList rule  9
	%start_pListInteger rule  10
	%start_pListIntList rule  11
	%start_pListProfItem rule  12
	%start_pVariableType rule  13
	%start_pListString rule  14
	%start_pListRHS rule  15
	%start_pRHS     rule  16
	%start_pMinimumSize rule  17
	%start_pReg2    rule  18
	%start_pReg1    rule  19
	%start_pReg3    rule  20
	%start_pReg     rule  21
	%start_pListIdent rule  22
	Ident           rule  23
	Char            rule  24
	Integer         rule  25
	String          rule  26
	Grammar         rule  27
	ListDef         rules 28, 29
	ListItem        rules 30, 31
	Def             rules 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46
	Item            rules 47, 48
	Cat             rules 49, 50
	Label           rules 51, 52, 53, 54
	LabelId         rules 55, 56, 57, 58, 59
	ProfItem        rule  60
	IntList         rule  61
	ListInteger     rules 62, 63, 64
	ListIntList     rules 65, 66, 67
	ListProfItem    rules 68, 69
	VariableType    rules 70, 71, 72
	ListString      rules 73, 74
	ListRHS         rules 75, 76
	RHS             rule  77
	MinimumSize     rules 78, 79
	Reg2            rules 80, 81
	Reg1            rules 82, 83, 84
	Reg3            rules 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97
	Reg             rule  98
	ListIdent       rules 99, 100

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pGrammar -> . Grammar                        (rule 0)

	'('            shift, and enter state 76
	'['            shift, and enter state 77
	'_'            shift, and enter state 78
	'coercions'    shift, and enter state 85
	'comment'      shift, and enter state 86
	'entrypoints'  shift, and enter state 87
	'internal'     shift, and enter state 88
	'layout'       shift, and enter state 89
	'position'     shift, and enter state 90
	'rules'        shift, and enter state 91
	'separator'    shift, and enter state 92
	'terminator'   shift, and enter state 93
	'token'        shift, and enter state 94
	'variable'     shift, and enter state 95
	L_Ident        shift, and enter state 24
	%eof           reduce using rule 28

	Ident          goto state 74
	Grammar        goto state 99
	ListDef        goto state 100
	Def            goto state 98
	Label          goto state 84
	LabelId        goto state 80

State 1

	%start_pListDef -> . ListDef                        (rule 1)

	'('            shift, and enter state 76
	'['            shift, and enter state 77
	'_'            shift, and enter state 78
	'coercions'    shift, and enter state 85
	'comment'      shift, and enter state 86
	'entrypoints'  shift, and enter state 87
	'internal'     shift, and enter state 88
	'layout'       shift, and enter state 89
	'position'     shift, and enter state 90
	'rules'        shift, and enter state 91
	'separator'    shift, and enter state 92
	'terminator'   shift, and enter state 93
	'token'        shift, and enter state 94
	'variable'     shift, and enter state 95
	L_Ident        shift, and enter state 24
	%eof           reduce using rule 28

	Ident          goto state 74
	ListDef        goto state 97
	Def            goto state 98
	Label          goto state 84
	LabelId        goto state 80

State 2

	%start_pListItem -> . ListItem                      (rule 2)

	'['            shift, and enter state 53
	L_Ident        shift, and enter state 24
	L_quoted       shift, and enter state 54
	%eof           reduce using rule 30

	Ident          goto state 47
	String         goto state 48
	ListItem       goto state 96
	Item           goto state 50
	Cat            goto state 51

State 3

	%start_pDef -> . Def                                (rule 3)

	'('            shift, and enter state 76
	'['            shift, and enter state 77
	'_'            shift, and enter state 78
	'coercions'    shift, and enter state 85
	'comment'      shift, and enter state 86
	'entrypoints'  shift, and enter state 87
	'internal'     shift, and enter state 88
	'layout'       shift, and enter state 89
	'position'     shift, and enter state 90
	'rules'        shift, and enter state 91
	'separator'    shift, and enter state 92
	'terminator'   shift, and enter state 93
	'token'        shift, and enter state 94
	'variable'     shift, and enter state 95
	L_Ident        shift, and enter state 24

	Ident          goto state 74
	Def            goto state 83
	Label          goto state 84
	LabelId        goto state 80

State 4

	%start_pItem -> . Item                              (rule 4)

	'['            shift, and enter state 53
	L_Ident        shift, and enter state 24
	L_quoted       shift, and enter state 54

	Ident          goto state 47
	String         goto state 48
	Item           goto state 82
	Cat            goto state 51

State 5

	%start_pCat -> . Cat                                (rule 5)

	'['            shift, and enter state 53
	L_Ident        shift, and enter state 24

	Ident          goto state 47
	Cat            goto state 81

State 6

	%start_pLabel -> . Label                            (rule 6)

	'('            shift, and enter state 76
	'['            shift, and enter state 77
	'_'            shift, and enter state 78
	L_Ident        shift, and enter state 24

	Ident          goto state 74
	Label          goto state 79
	LabelId        goto state 80

State 7

	%start_pLabelId -> . LabelId                        (rule 7)

	'('            shift, and enter state 76
	'['            shift, and enter state 77
	'_'            shift, and enter state 78
	L_Ident        shift, and enter state 24

	Ident          goto state 74
	LabelId        goto state 75

State 8

	%start_pProfItem -> . ProfItem                      (rule 8)

	'('            shift, and enter state 65

	ProfItem       goto state 73

State 9

	%start_pIntList -> . IntList                        (rule 9)

	'['            shift, and enter state 68

	IntList        goto state 72

State 10

	%start_pListInteger -> . ListInteger                (rule 10)

	L_integ        shift, and enter state 71
	%eof           reduce using rule 62

	Integer        goto state 69
	ListInteger    goto state 70

State 11

	%start_pListIntList -> . ListIntList                (rule 11)

	'['            shift, and enter state 68
	%eof           reduce using rule 65

	IntList        goto state 66
	ListIntList    goto state 67

State 12

	%start_pListProfItem -> . ListProfItem              (rule 12)

	'('            shift, and enter state 65

	ProfItem       goto state 63
	ListProfItem   goto state 64

State 13

	%start_pVariableType -> . VariableType              (rule 13)

	'binder'       shift, and enter state 60
	'name'         shift, and enter state 61
	'scope'        shift, and enter state 62

	VariableType   goto state 59

State 14

	%start_pListString -> . ListString                  (rule 14)

	L_quoted       shift, and enter state 54

	String         goto state 57
	ListString     goto state 58

State 15

	%start_pListRHS -> . ListRHS                        (rule 15)

	'['            shift, and enter state 53
	'|'            reduce using rule 30
	L_Ident        shift, and enter state 24
	L_quoted       shift, and enter state 54
	%eof           reduce using rule 30

	Ident          goto state 47
	String         goto state 48
	ListItem       goto state 49
	Item           goto state 50
	Cat            goto state 51
	ListRHS        goto state 55
	RHS            goto state 56

State 16

	%start_pRHS -> . RHS                                (rule 16)

	'['            shift, and enter state 53
	L_Ident        shift, and enter state 24
	L_quoted       shift, and enter state 54
	%eof           reduce using rule 30

	Ident          goto state 47
	String         goto state 48
	ListItem       goto state 49
	Item           goto state 50
	Cat            goto state 51
	RHS            goto state 52

State 17

	%start_pMinimumSize -> . MinimumSize                (rule 17)

	'nonempty'     shift, and enter state 46
	%eof           reduce using rule 79

	MinimumSize    goto state 45

State 18

	%start_pReg2 -> . Reg2                              (rule 18)

	'('            shift, and enter state 32
	'['            shift, and enter state 33
	'char'         shift, and enter state 34
	'digit'        shift, and enter state 35
	'eps'          shift, and enter state 36
	'letter'       shift, and enter state 37
	'lower'        shift, and enter state 38
	'upper'        shift, and enter state 39
	'{'            shift, and enter state 40
	L_charac       shift, and enter state 41

	Char           goto state 27
	Reg2           goto state 44
	Reg3           goto state 30

State 19

	%start_pReg1 -> . Reg1                              (rule 19)

	'('            shift, and enter state 32
	'['            shift, and enter state 33
	'char'         shift, and enter state 34
	'digit'        shift, and enter state 35
	'eps'          shift, and enter state 36
	'letter'       shift, and enter state 37
	'lower'        shift, and enter state 38
	'upper'        shift, and enter state 39
	'{'            shift, and enter state 40
	L_charac       shift, and enter state 41

	Char           goto state 27
	Reg2           goto state 28
	Reg1           goto state 43
	Reg3           goto state 30

State 20

	%start_pReg3 -> . Reg3                              (rule 20)

	'('            shift, and enter state 32
	'['            shift, and enter state 33
	'char'         shift, and enter state 34
	'digit'        shift, and enter state 35
	'eps'          shift, and enter state 36
	'letter'       shift, and enter state 37
	'lower'        shift, and enter state 38
	'upper'        shift, and enter state 39
	'{'            shift, and enter state 40
	L_charac       shift, and enter state 41

	Char           goto state 27
	Reg3           goto state 42

State 21

	%start_pReg -> . Reg                                (rule 21)

	'('            shift, and enter state 32
	'['            shift, and enter state 33
	'char'         shift, and enter state 34
	'digit'        shift, and enter state 35
	'eps'          shift, and enter state 36
	'letter'       shift, and enter state 37
	'lower'        shift, and enter state 38
	'upper'        shift, and enter state 39
	'{'            shift, and enter state 40
	L_charac       shift, and enter state 41

	Char           goto state 27
	Reg2           goto state 28
	Reg1           goto state 29
	Reg3           goto state 30
	Reg            goto state 31

State 22

	%start_pListIdent -> . ListIdent                    (rule 22)

	L_Ident        shift, and enter state 24

	Ident          goto state 25
	ListIdent      goto state 26

State 23

	Ident -> . L_Ident                                  (rule 23)

	L_Ident        shift, and enter state 24


State 24

	Ident -> L_Ident .                                  (rule 23)

	'('            reduce using rule 23
	','            reduce using rule 23
	'.'            reduce using rule 23
	'::='          reduce using rule 23
	';'            reduce using rule 23
	'['            reduce using rule 23
	']'            reduce using rule 23
	'_'            reduce using rule 23
	'char'         reduce using rule 23
	'digit'        reduce using rule 23
	'eps'          reduce using rule 23
	'letter'       reduce using rule 23
	'lower'        reduce using rule 23
	'upper'        reduce using rule 23
	'{'            reduce using rule 23
	'|'            reduce using rule 23
	L_Ident        reduce using rule 23
	L_charac       reduce using rule 23
	L_integ        reduce using rule 23
	L_quoted       reduce using rule 23
	%eof           reduce using rule 23


State 25

	ListIdent -> Ident .                                (rule 99)
	ListIdent -> Ident . ',' ListIdent                  (rule 100)

	','            shift, and enter state 139
	';'            reduce using rule 99
	%eof           reduce using rule 99


State 26

	%start_pListIdent -> ListIdent .                    (rule 22)

	%eof           accept


State 27

	Reg3 -> Char .                                      (rule 89)

	'('            reduce using rule 89
	')'            reduce using rule 89
	'*'            reduce using rule 89
	'+'            reduce using rule 89
	'-'            reduce using rule 89
	';'            reduce using rule 89
	'?'            reduce using rule 89
	'['            reduce using rule 89
	'char'         reduce using rule 89
	'digit'        reduce using rule 89
	'eps'          reduce using rule 89
	'letter'       reduce using rule 89
	'lower'        reduce using rule 89
	'upper'        reduce using rule 89
	'{'            reduce using rule 89
	'|'            reduce using rule 89
	L_charac       reduce using rule 89
	%eof           reduce using rule 89


State 28

	Reg2 -> Reg2 . Reg3                                 (rule 80)
	Reg1 -> Reg2 . '-' Reg2                             (rule 83)
	Reg1 -> Reg2 .                                      (rule 84)

	'('            shift, and enter state 32
	')'            reduce using rule 84
	'-'            shift, and enter state 138
	';'            reduce using rule 84
	'['            shift, and enter state 33
	'char'         shift, and enter state 34
	'digit'        shift, and enter state 35
	'eps'          shift, and enter state 36
	'letter'       shift, and enter state 37
	'lower'        shift, and enter state 38
	'upper'        shift, and enter state 39
	'{'            shift, and enter state 40
	'|'            reduce using rule 84
	L_charac       shift, and enter state 41
	%eof           reduce using rule 84

	Char           goto state 27
	Reg3           goto state 130

State 29

	Reg1 -> Reg1 . '|' Reg2                             (rule 82)
	Reg -> Reg1 .                                       (rule 98)

	')'            reduce using rule 98
	';'            reduce using rule 98
	'|'            shift, and enter state 131
	%eof           reduce using rule 98


State 30

	Reg2 -> Reg3 .                                      (rule 81)
	Reg3 -> Reg3 . '*'                                  (rule 85)
	Reg3 -> Reg3 . '+'                                  (rule 86)
	Reg3 -> Reg3 . '?'                                  (rule 87)

	'('            reduce using rule 81
	')'            reduce using rule 81
	'*'            shift, and enter state 132
	'+'            shift, and enter state 133
	'-'            reduce using rule 81
	';'            reduce using rule 81
	'?'            shift, and enter state 134
	'['            reduce using rule 81
	'char'         reduce using rule 81
	'digit'        reduce using rule 81
	'eps'          reduce using rule 81
	'letter'       reduce using rule 81
	'lower'        reduce using rule 81
	'upper'        reduce using rule 81
	'{'            reduce using rule 81
	'|'            reduce using rule 81
	L_charac       reduce using rule 81
	%eof           reduce using rule 81


State 31

	%start_pReg -> Reg .                                (rule 21)

	%eof           accept


State 32

	Reg3 -> '(' . Reg ')'                               (rule 97)

	'('            shift, and enter state 32
	'['            shift, and enter state 33
	'char'         shift, and enter state 34
	'digit'        shift, and enter state 35
	'eps'          shift, and enter state 36
	'letter'       shift, and enter state 37
	'lower'        shift, and enter state 38
	'upper'        shift, and enter state 39
	'{'            shift, and enter state 40
	L_charac       shift, and enter state 41

	Char           goto state 27
	Reg2           goto state 28
	Reg1           goto state 29
	Reg3           goto state 30
	Reg            goto state 137

State 33

	Reg3 -> '[' . String ']'                            (rule 90)

	L_quoted       shift, and enter state 54

	String         goto state 136

State 34

	Reg3 -> 'char' .                                    (rule 96)

	'('            reduce using rule 96
	')'            reduce using rule 96
	'*'            reduce using rule 96
	'+'            reduce using rule 96
	'-'            reduce using rule 96
	';'            reduce using rule 96
	'?'            reduce using rule 96
	'['            reduce using rule 96
	'char'         reduce using rule 96
	'digit'        reduce using rule 96
	'eps'          reduce using rule 96
	'letter'       reduce using rule 96
	'lower'        reduce using rule 96
	'upper'        reduce using rule 96
	'{'            reduce using rule 96
	'|'            reduce using rule 96
	L_charac       reduce using rule 96
	%eof           reduce using rule 96


State 35

	Reg3 -> 'digit' .                                   (rule 92)

	'('            reduce using rule 92
	')'            reduce using rule 92
	'*'            reduce using rule 92
	'+'            reduce using rule 92
	'-'            reduce using rule 92
	';'            reduce using rule 92
	'?'            reduce using rule 92
	'['            reduce using rule 92
	'char'         reduce using rule 92
	'digit'        reduce using rule 92
	'eps'          reduce using rule 92
	'letter'       reduce using rule 92
	'lower'        reduce using rule 92
	'upper'        reduce using rule 92
	'{'            reduce using rule 92
	'|'            reduce using rule 92
	L_charac       reduce using rule 92
	%eof           reduce using rule 92


State 36

	Reg3 -> 'eps' .                                     (rule 88)
